--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "UsdebtFont";
-  src: url("./assets/fonts/BOLD.TTF") format("truetype");
+  src: url("./assets/fonts/thin.OTF") format("truetype");
 }
 @font-face {
   font-family: "RockUsdebtFont";
