--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,20 @@
 @font-face {
   font-family: "UsdebtFont";
-  src: url("./assets/fonts/thin.OTF") format("truetype");
+  src: url("./assets/fonts/impact.ttf") format("truetype");
 }
 @font-face {
   font-family: "RockUsdebtFont";
   src: url("./assets/fonts/ROCK.TTF") format("truetype");
 }
+@font-face {
+  font-family: "MontserratFont";
+  src: url("./assets/fonts/Montserrat.ttf") format("truetype");
+}
 
 
 body {
   margin: 0;
-  font-family: "UsdebtFont", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: "MontserratFont", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -19,7 +23,7 @@ body {
 }
 
 code {
-  font-family: "UsdebtFont", source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: "MontserratFont", source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
